// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check FormValidityProvider should click on the button and get a custom error message 1`] = `
.css-inzsrf,
[data-css-inzsrf] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-lwcmpf,
[data-css-lwcmpf] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-13pxttz,
[data-css-13pxttz] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-8pszjj,
[data-css-8pszjj] {
  position: absolute;
  bottom: 0;
}

.css-3fsu53,
[data-css-3fsu53] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-u01wl9,
[data-css-u01wl9] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-dau5wj,
[data-css-dau5wj] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-ouc013,
[data-css-ouc013] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: all .225s ease-out;
  border: 0;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-b05tpj,
[data-css-b05tpj] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-4p3ux5=""
  >
    <div
      data-css-4p3ux5=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-13pxttz=""
      data-css-3fsu53=""
      data-css-8pszjj=""
    >
      <button
        data-css-inzsrf=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-4p3ux5=""
          data-css-u01wl9=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-dau5wj=""
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-4p3ux5=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        data-css-4p3ux5=""
        data-css-lwcmpf=""
        style={
          Object {
            "opacity": 0,
            "top": 12,
          }
        }
      >
        <div
          data-css-4p3ux5=""
          data-css-b05tpj=""
        >
           
          *
        </div>
      </div>
      <input
        aria-required={true}
        data-css-ouc013=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
    </div>
  </div>
</form>
`;

exports[`Check FormValidityProvider should click on the button and get a custom error message 2`] = `
.css-inzsrf,
[data-css-inzsrf] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-7z5u2j,
[data-css-7z5u2j] {
  background-color: #c1392b;
  position: absolute;
  bottom: 100%;
  left: 0px;
  z-index: 40;
  width: 100%;
  padding: 12px 15px 15px;
  border-radius: 2px;
  box-shadow: 0 1px 2px 1px rgba(0,0,0,.25);
}

.css-h34r0x,
[data-css-h34r0x] {
  position: absolute;
  bottom: -10px;
  left: 50%;
  margin-left: -10px;
  display: block;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid #c1392b;
}

.css-lwcmpf,
[data-css-lwcmpf] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-13pxttz,
[data-css-13pxttz] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-8pszjj,
[data-css-8pszjj] {
  position: absolute;
  bottom: 0;
}

.css-3fsu53,
[data-css-3fsu53] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-u01wl9,
[data-css-u01wl9] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-dau5wj,
[data-css-dau5wj] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-ouc013,
[data-css-ouc013] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: all .225s ease-out;
  border: 0;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-b05tpj,
[data-css-b05tpj] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-1xcgwwg,
[data-css-1xcgwwg] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-4p3ux5=""
  >
    <div
      data-css-4p3ux5=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-13pxttz=""
      data-css-3fsu53=""
      data-css-8pszjj=""
    >
      <button
        data-css-inzsrf=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-4p3ux5=""
          data-css-u01wl9=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-dau5wj=""
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-4p3ux5=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        data-css-4p3ux5=""
        data-css-lwcmpf=""
        style={
          Object {
            "opacity": 0,
            "top": 12,
          }
        }
      >
        <div
          data-css-4p3ux5=""
          data-css-b05tpj=""
        >
           
          *
        </div>
      </div>
      <div
        data-css-4p3ux5=""
        data-css-7z5u2j=""
        onClick={[Function]}
      >
        <div
          data-css-1xcgwwg=""
          data-css-4p3ux5=""
        >
          A nice error message 🐼
        </div>
        <div
          data-css-4p3ux5=""
          data-css-h34r0x=""
        />
      </div>
      <input
        aria-required={true}
        data-css-ouc013=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
    </div>
  </div>
</form>
`;

exports[`Check FormValidityProvider should click on the button and get a default error message 1`] = `
.css-inzsrf,
[data-css-inzsrf] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-lwcmpf,
[data-css-lwcmpf] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-13pxttz,
[data-css-13pxttz] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-8pszjj,
[data-css-8pszjj] {
  position: absolute;
  bottom: 0;
}

.css-3fsu53,
[data-css-3fsu53] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-u01wl9,
[data-css-u01wl9] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-dau5wj,
[data-css-dau5wj] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-ouc013,
[data-css-ouc013] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: all .225s ease-out;
  border: 0;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-b05tpj,
[data-css-b05tpj] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-4p3ux5=""
  >
    <div
      data-css-4p3ux5=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-13pxttz=""
      data-css-3fsu53=""
      data-css-8pszjj=""
    >
      <button
        data-css-inzsrf=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-4p3ux5=""
          data-css-u01wl9=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-dau5wj=""
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-4p3ux5=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        data-css-4p3ux5=""
        data-css-lwcmpf=""
        style={
          Object {
            "opacity": 0,
            "top": 12,
          }
        }
      >
        <div
          data-css-4p3ux5=""
          data-css-b05tpj=""
        >
           
          *
        </div>
      </div>
      <input
        aria-required={true}
        data-css-ouc013=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
    </div>
  </div>
</form>
`;

exports[`Check FormValidityProvider should click on the button and get a default error message 2`] = `
.css-inzsrf,
[data-css-inzsrf] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-7z5u2j,
[data-css-7z5u2j] {
  background-color: #c1392b;
  position: absolute;
  bottom: 100%;
  left: 0px;
  z-index: 40;
  width: 100%;
  padding: 12px 15px 15px;
  border-radius: 2px;
  box-shadow: 0 1px 2px 1px rgba(0,0,0,.25);
}

.css-h34r0x,
[data-css-h34r0x] {
  position: absolute;
  bottom: -10px;
  left: 50%;
  margin-left: -10px;
  display: block;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid #c1392b;
}

.css-lwcmpf,
[data-css-lwcmpf] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-13pxttz,
[data-css-13pxttz] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-8pszjj,
[data-css-8pszjj] {
  position: absolute;
  bottom: 0;
}

.css-3fsu53,
[data-css-3fsu53] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-u01wl9,
[data-css-u01wl9] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-dau5wj,
[data-css-dau5wj] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-ouc013,
[data-css-ouc013] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: all .225s ease-out;
  border: 0;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-b05tpj,
[data-css-b05tpj] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-1xcgwwg,
[data-css-1xcgwwg] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-4p3ux5=""
  >
    <div
      data-css-4p3ux5=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-13pxttz=""
      data-css-3fsu53=""
      data-css-8pszjj=""
    >
      <button
        data-css-inzsrf=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-4p3ux5=""
          data-css-u01wl9=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-dau5wj=""
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-4p3ux5=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        data-css-4p3ux5=""
        data-css-lwcmpf=""
        style={
          Object {
            "opacity": 0,
            "top": 12,
          }
        }
      >
        <div
          data-css-4p3ux5=""
          data-css-b05tpj=""
        >
           
          *
        </div>
      </div>
      <div
        data-css-4p3ux5=""
        data-css-7z5u2j=""
        onClick={[Function]}
      >
        <div
          data-css-1xcgwwg=""
          data-css-4p3ux5=""
        >
          Default error message from the browser 🐍.
        </div>
        <div
          data-css-4p3ux5=""
          data-css-h34r0x=""
        />
      </div>
      <input
        aria-required={true}
        data-css-ouc013=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
    </div>
  </div>
</form>
`;
